syntax = "proto3";

import "account-receivable-batch-updater-service/account_receivable_batch_updater_core.proto";

package account_receivable_batch_updater.service.v1;
option go_package = "./pb";

// #region General Request and Reuseable

message Pagination {
    int32 limit = 1;
    int32 page = 2;
    string sort = 3;
    string dir = 4;
    uint64 total_pages = 5;
    uint64 total_rows = 6;
    string filter = 7;
};

message GeneralBodyResponse {
    string process_id = 1;
    bool error = 2;
    uint32 code = 3;
    string message = 4;
};

// #endregion

message HealthCheckResponse {
    string message = 1;
};
message ProcessUpdateBatchRequest {
    string app_key = 1;
    string process_id = 2;
    uint64 batch_id = 3;
    string batch_redis_key = 4;
    BatchType batch_type = 5;
    uint32 total_processed_data = 6;
    Path path = 7;
    uint32 queue_priority = 8;
	uint64 mandate_category_id = 9;
    bytes file_data = 10;
	bytes user_data = 11;
};

message FileData {
    string filename = 1;
    string extension = 2;
    string ftp_port = 3;
    string ftp_host = 4;
    string ftp_username = 5;
    string ftp_password = 6;
    string ftp_folder_input = 7;
    string ftp_folder_output = 8;
    string ftp_receipt = 9;
    bool stp_status = 10;
    bool nstp_status = 11;
    bool is_maker_confirmation = 12;
    string file_protocol = 13;
    string file_id = 14;
    string charge_type = 15;
    int32 task_step = 16;
    double fee_amount = 17;
};

message UserData {
    string username = 1;
    string user_type = 2;
    uint64 company_id = 3;
    string company_name = 4;
    repeated uint64 role_ids = 5;
    uint64 holding_id = 6;
    string company_code = 7;
	uint64 user_id = 8;
};
