syntax = "proto3";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "koer-tax-service/koer_tax_payload.proto";

package koer_tax.service.v3;

option go_package = "./pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Koer GRPC Tax Service";
    version: "1.0";
  }

  schemes: HTTP;
  // schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";

  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
};

// Generated according to https://cloud.google.com/apis/design/standard_methods
service KoerTaxService {
  
  // V3

   rpc V3SaveTaxNumber(V3SaveTaxNumberRequest) returns (GeneralBodyResponse) {
    option (google.api.http) = {
      post: "/api/tax/v3/tax/save-tax-number",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Save Tax Number"
      description: "API for save tax number",
      tags: ["Tax"]
    };
  }


}