syntax = "proto3";

import "validate/validate.proto";

package koer_tax.service.v3;
option go_package = "./pb";

message GeneralBodyResponse {
  bool error = 2;
  uint32 code = 3;
  string message = 4;
};

message GeneralBodyRequest {
  string process_id = 1;
  string token = 2;
};

message V3SaveTaxNumberRequest {
  string tax_id_number = 1 [(buf.validate.field).required = true];
  string tax_owner_name = 2 [(buf.validate.field).required = true];
}